# react-native-dev-guard

./: .gitignore  .npmignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  react-native-dev-guard.podspec  tsconfig.json
android/: build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  devguard-lib.cpp
cpp/: devguard_core.c  devguard_core.h
example/: metro.config.js  package-lock.json  package.json  tsconfig.json
example/__tests__/: vaultKey.test.js
example/android/: gradle.properties  settings.gradle
example/android/app/: build.gradle
example/ios/: GoogleService-Info.plist  Podfile
example/ios/DevGuardExample/: AppDelegate.mm  (+3 more)
example/src/: App.tsx
ios/: DevGuard.h  DevGuard.mm
lib/: index.d.ts  index.js
lib/components/: ContactButton.d.ts  ContactButton.js  DiagnosticOverlay.d.ts  DiagnosticOverlay.js  LockScreen.d.ts  LockScreen.js  SecurityToast.d.ts  SecurityToast.js
lib/services/: CacheService.d.ts  CacheService.js  DevGuardLogger.d.ts  DevGuardLogger.js  DeviceTokenService.d.ts  DeviceTokenService.js  GuardEnforcement.d.ts  GuardEnforcement.js  HardwareService.d.ts  HardwareService.js  RemoteWipeService.d.ts  RemoteWipeService.js  UsageLogger.d.ts  UsageLogger.js
scratch/DevGuardExample/: app.json  package.json
src/: index.tsx
src/components/: ContactButton.tsx  DiagnosticOverlay.tsx  LockScreen.tsx  SecurityToast.tsx
src/services/: CacheService.ts  DevGuardLogger.ts  DeviceTokenService.ts  GuardEnforcement.ts  HardwareService.ts  RemoteWipeService.ts  UsageLogger.ts
(+15 files in other folders)
